feat: adiciona seção de presentes e campo de presente no RSVP

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body class="overflow-x-hidden">
     <!-- Hero Section -->
-    <section class="relative h-screen flex items-center justify-center bg-cover bg-center" style="background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url('https://images.unsplash.com/photo-1665967330345-95e0b796d5e6?crop=entropy&cs=srgb&fm=jpg&ixid=M3w3Mzg2NzB8MHwxfHNlYXJjaHwxfHxjYXNhJTIwbm92YSUyMGVsZWdhbnRlJTIwbHV4byUyMGFjb25jaGVnb3xlbnwwfHx8fDE3NDY5MjIyNjF8MA&ixlib=rb-4.1.0&q=85');">
+    <section class="relative h-screen flex items-center justify-center bg-cover bg-center" style="background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url('https://images.unsplash.com/photo-1665967330345-95e0b796d5e6?crop=entropy&cs=srgb&fm=jpg&ixid=M3w3Mzg2NzB8MHwxfHNlYXJjaHwxfHxjYXNhJTIwbm92YSUyMGVsZWdhbnRlJTIwbHV4byUyMGFjb25jaGVnb3xlbnwwfHx8fDE3NDY5MjI1NDZ8MA&ixlib=rb-4.1.0&q=85');">
         <div class="text-center px-4">
             <h1 class="playfair text-5xl md:text-7xl font-light mb-4 gold-text">Chá de Casa Nova & Hóspedes</h1>
             <div class="playfair text-2xl md:text-3xl font-light mb-8">Sofia & Miguel</div>
@@ -117,19 +117,72 @@
         </div>
     </section>
 
+    <!-- Lista de Presentes Section -->
+    <section id="presentes" class="py-20 bg-[#faf9f7]">
+        <div class="container mx-auto px-4 max-w-3xl">
+            <h2 class="playfair text-4xl text-center mb-8 gold-text">Lista de Presentes</h2>
+            <p class="text-center text-lg mb-10 text-gray-700">
+                Veja sugestões de presentes para tornar nosso novo lar ainda mais especial!<br>
+                Selecione o que deseja levar e informe no RSVP.
+            </p>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                <div class="flex items-center bg-white rounded-lg shadow p-4">
+                    <i class="fas fa-bath text-[#d4af37] text-2xl mr-4"></i>
+                    <span>Jogo de Toalhas</span>
+                </div>
+                <div class="flex items-center bg-white rounded-lg shadow p-4">
+                    <i class="fas fa-glass-cheers text-[#d4af37] text-2xl mr-4"></i>
+                    <span>Conjunto de Copos</span>
+                </div>
+                <div class="flex items-center bg-white rounded-lg shadow p-4">
+                    <i class="fas fa-utensil-spoon text-[#d4af37] text-2xl mr-4"></i>
+                    <span>Panela</span>
+                </div>
+                <div class="flex items-center bg-white rounded-lg shadow p-4">
+                    <i class="fas fa-seedling text-[#d4af37] text-2xl mr-4"></i>
+                    <span>Vaso Decorativo</span>
+                </div>
+                <div class="flex items-center bg-white rounded-lg shadow p-4">
+                    <i class="fas fa-bed text-[#d4af37] text-2xl mr-4"></i>
+                    <span>Jogo de Cama</span>
+                </div>
+                <div class="flex items-center bg-white rounded-lg shadow p-4">
+                    <i class="fas fa-plate-wheat text-[#d4af37] text-2xl mr-4"></i>
+                    <span>Aparelho de Jantar</span>
+                </div>
+                <div class="flex items-center bg-white rounded-lg shadow p-4">
+                    <i class="fas fa-coffee text-[#d4af37] text-2xl mr-4"></i>
+                    <span>Cafeteira</span>
+                </div>
+                <div class="flex items-center bg-white rounded-lg shadow p-4">
+                    <i class="fas fa-rug text-[#d4af37] text-2xl mr-4"></i>
+                    <span>Tapete</span>
+                </div>
+                <div class="flex items-center bg-white rounded-lg shadow p-4">
+                    <i class="fas fa-apple-alt text-[#d4af37] text-2xl mr-4"></i>
+                    <span>Fruteira</span>
+                </div>
+                <div class="flex items-center bg-white rounded-lg shadow p-4">
+                    <i class="fas fa-pepper-hot text-[#d4af37] text-2xl mr-4"></i>
+                    <span>Kit de Temperos</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Gallery Section -->
     <section class="py-20 bg-[#faf9f7]">
         <div class="container mx-auto px-4">
             <h2 class="playfair text-4xl text-center mb-16 gold-text">Nosso Novo Lar</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-6xl mx-auto">
                 <div class="gallery-item cursor-pointer overflow-hidden rounded-lg shadow-lg transition-transform duration-300 hover:scale-105">
-                    <img src="https://images.unsplash.com/photo-1665967330345-95e0b796d5e6?crop=entropy&cs=srgb&fm=jpg&ixid=M3w3Mzg2NzB8MHwxfHNlYXJjaHwxfHxjYXNhJTIwbm92YSUyMGVsZWdhbnRlJTIwbHV4byUyMGFjb25jaGVnb3xlbnwwfHx8fDE3NDY5MjIyNjF8MA&ixlib=rb-4.1.0&q=85" alt="Casa nova elegante" class="w-full h-80 object-cover">
+                    <img src="https://images.unsplash.com/photo-1665967330345-95e0b796d5e6?crop=entropy&cs=srgb&fm=jpg&ixid=M3w3Mzg2NzB8MHwxfHNlYXJjaHwxfHxjYXNhJTIwbm92YSUyMGVsZWdhbnRlJTIwbHV4byUyMGFjb25jaGVnb3xlbnwwfHx8fDE3NDY5MjI1NDZ8MA&ixlib=rb-4.1.0&q=85" alt="Casa nova elegante" class="w-full h-80 object-cover">
                 </div>
                 <div class="gallery-item cursor-pointer overflow-hidden rounded-lg shadow-lg transition-transform duration-300 hover:scale-105">
-                    <img src="https://images.unsplash.com/photo-1558043279-a860bfe6d3b5?crop=entropy&cs=srgb&fm=jpg&ixid=M3w3Mzg2NzB8MHwxfHNlYXJjaHwyfHxjYXNhJTIwbm92YSUyMGVsZWdhbnRlJTIwbHV4byUyMGFjb25jaGVnb3xlbnwwfHx8fDE3NDY5MjIyNjF8MA&ixlib=rb-4.1.0&q=85" alt="Mesa posta aconchegante" class="w-full h-80 object-cover">
+                    <img src="https://images.unsplash.com/photo-1558043279-a860bfe6d3b5?crop=entropy&cs=srgb&fm=jpg&ixid=M3w3Mzg2NzB8MHwxfHNlYXJjaHwyfHxjYXNhJTIwbm92YSUyMGVsZWdhbnRlJTIwbHV4byUyMGFjb25jaGVnb3xlbnwwfHx8fDE3NDY5MjI1NDZ8MA&ixlib=rb-4.1.0&q=85" alt="Mesa posta aconchegante" class="w-full h-80 object-cover">
                 </div>
                 <div class="gallery-item cursor-pointer overflow-hidden rounded-lg shadow-lg transition-transform duration-300 hover:scale-105">
-                    <img src="https://images.unsplash.com/photo-1543394305-1dce3e17815d?crop=entropy&cs=srgb&fm=jpg&ixid=M3w3Mzg2NzB8MHwxfHNlYXJjaHwzfHxjYXNhJTIwbm92YSUyMGVsZWdhbnRlJTIwbHV4byUyMGFjb25jaGVnb3xlbnwwfHx8fDE3NDY5MjIyNjF8MA&ixlib=rb-4.1.0&q=85" alt="Detalhe de decoração" class="w-full h-80 object-cover">
+                    <img src="https://images.unsplash.com/photo-1543394305-1dce3e17815d?crop=entropy&cs=srgb&fm=jpg&ixid=M3w3Mzg2NzB8MHwxfHNlYXJjaHwzfHxjYXNhJTIwbm92YSUyMGVsZWdhbnRlJTIwbHV4byUyMGFjb25jaGVnb3xlbnwwfHx8fDE3NDY5MjI1NDZ8MA&ixlib=rb-4.1.0&q=85" alt="Detalhe de decoração" class="w-full h-80 object-cover">
                 </div>
             </div>
         </div>
@@ -157,6 +210,23 @@
                         <option value="2">2 pessoas</option>
                         <option value="3">3 pessoas</option>
                         <option value="4">4 pessoas</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="gift" class="block mb-2">Presente que pretende levar</label>
+                    <select id="gift" class="w-full px-4 py-2 border-b border-gray-300 focus:border-[#d4af37] focus:outline-none">
+                        <option value="">Selecione um presente</option>
+                        <option value="Jogo de Toalhas">Jogo de Toalhas</option>
+                        <option value="Conjunto de Copos">Conjunto de Copos</option>
+                        <option value="Panela">Panela</option>
+                        <option value="Vaso Decorativo">Vaso Decorativo</option>
+                        <option value="Jogo de Cama">Jogo de Cama</option>
+                        <option value="Aparelho de Jantar">Aparelho de Jantar</option>
+                        <option value="Cafeteira">Cafeteira</option>
+                        <option value="Tapete">Tapete</option>
+                        <option value="Fruteira">Fruteira</option>
+                        <option value="Kit de Temperos">Kit de Temperos</option>
+                        <option value="Outro">Outro</option>
                     </select>
                 </div>
                 <div>
